# serializer version: 1
# name: test_compile_cli[complex-stream][compile-cli]
  list([
    '-i',
    'input1.mp4',
    '-i',
    'input2.mp4',
    '-filter_complex',
    '[0:v]reverse[s0];[1:a]areverse[s1];[s0]split=outputs=2[s2#0][s2#1];[s1]asplit=outputs=2[s3#0][s3#1];[s2#0][s3#0][s2#1][s3#1]concat=n=2:v=1:a=1[s4#0][s4#1]',
    '-map',
    '[s4#0]',
    '-map',
    '[s4#1]',
    'tmp.mp4',
  ])
# ---
# name: test_compile_cli[not-utilize-split][compile-cli]
  list([
    '-i',
    'input1.mp4',
    '-filter_complex',
    '[0]reverse[s0]',
    '-map',
    '[s0]',
    'tmp.mp4',
  ])
# ---
# name: test_compile_cli[reduntant-split-duplicate][compile-cli]
  list([
    '-i',
    'input1.mp4',
    '-filter_complex',
    '[0]reverse[s0];[s0]split=outputs=3[s1#0][s1#1][s1#2];[s1#0][s1#1][s1#2]concat=n=3[s2]',
    '-map',
    '[s2]',
    'tmp.mp4',
  ])
# ---
# name: test_compile_cli[reduntant-split-outputs-1][compile-cli]
  list([
    '-i',
    'input1.mp4',
    '-filter_complex',
    '[0]reverse[s0]',
    '-map',
    '[s0]',
    'tmp.mp4',
  ])
# ---
# name: test_compile_cli[reuse-input][compile-cli]
  list([
    '-i',
    'input.mp4',
    '-filter_complex',
    '[0:v][0:v]concat=n=2[s0]',
    '-map',
    '[s0]',
    'tmp.mp4',
  ])
# ---
# name: test_compile_cli[reuse-stream][compile-cli]
  list([
    '-i',
    'input.mp4',
    '-filter_complex',
    '[0]reverse[s0];[s0]split=outputs=2[s1#0][s1#1];[s1#0][s1#1]concat=n=2[s2]',
    '-map',
    '[s2]',
    'tmp.mp4',
  ])
# ---
